Refactor (see extended)
Updated API calls to return EF objects instead of view model objects,
added date.js to handle the new date format, got the "Remaining" value
computed client-side.  Modal still borked.

--- a/ExpenseTracker/ExpenseTracker.csproj
+++ b/ExpenseTracker/ExpenseTracker.csproj
@@ -218,6 +218,7 @@
     <Content Include="Images\glyphicons-halflings.png" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\date.js" />
     <Content Include="Scripts\jquery-1.7.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
