--- a/ExpenseTracker.Framework/ExpenseTracker.Framework.csproj
+++ b/ExpenseTracker.Framework/ExpenseTracker.Framework.csproj
@@ -31,10 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
@@ -49,51 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataContracts\PaycheckBudgetDataContract.cs" />
-    <Compile Include="Data\Concrete\PaycheckBudgetRepository.cs" />
-    <Compile Include="Data\IPaycheckBudgetRepository.cs" />
-    <Compile Include="Models\DbContext.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DbContext.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Models\ExpenseTrackerModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ExpenseTrackerModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\ExpenseTrackerModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ExpenseTrackerModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\PaycheckBudget.cs">
-      <DependentUpon>ExpenseTrackerModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\PaycheckBudgetItem.cs">
-      <DependentUpon>ExpenseTrackerModel.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\PaycheckBudget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\PaycheckBudgetViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <EntityDeploy Include="Models\DbContext.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DbContext.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.Config" />
-    <None Include="Models\ExpenseTrackerModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ExpenseTrackerModel.Context.cs</LastGenOutput>
-    </None>
-    <None Include="Models\ExpenseTrackerModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ExpenseTrackerModel.cs</LastGenOutput>
-    </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
