--- a/ExpenseTracker/Web.config
+++ b/ExpenseTracker/Web.config
@@ -4,12 +4,8 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
   <connectionStrings>
-    <add name="ExpenseTrackerEntities" connectionString="metadata=res://*/Models.DbContext.csdl|res://*/Models.DbContext.ssdl|res://*/Models.DbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ExpenseTracker;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RavenDB" connectionString="Url=http://localhost:8080" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -71,7 +67,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-  </entityFramework>
 </configuration>
