--- a/ExpenseTracker/packages.config
+++ b/ExpenseTracker/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.0.5" targetFramework="net40" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
@@ -24,6 +23,9 @@
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" />
+  <package id="RavenDB.Client" version="2.0.2261" targetFramework="net40" />
+  <package id="RavenDB.Database" version="2.0.2261" targetFramework="net40" />
+  <package id="RavenDB.Embedded" version="2.0.2261" targetFramework="net40" />
   <package id="WebActivator" version="1.5.3" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
