--- a/ExpenseTracker.Framework/ExpenseTracker.Framework.csproj
+++ b/ExpenseTracker.Framework/ExpenseTracker.Framework.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Models\PaycheckBudget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BudgetItemAsEvent.cs" />
+    <Compile Include="ViewModels\PagingInfo.cs" />
+    <Compile Include="ViewModels\PaycheckBudgetResponse.cs" />
     <Compile Include="ViewModels\PaycheckBudgetViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
