Refactored for EF

--- a/ExpenseTracker.Framework/App.Config
+++ b/ExpenseTracker.Framework/App.Config
@@ -1,2 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration></configuration>
+<configuration>
+  <connectionStrings>
+    <add name="ExpenseTrackerEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:pcqgx8ear5.database.windows.net;initial catalog=interneth3ro;user id=interneth3ro;password=JM71cl!@;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
