--- a/ExpenseTracker/Web.config
+++ b/ExpenseTracker/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="RavenDB" connectionString="Url=http://localhost:8080" />
+	  <add name="ExpenseTrackerEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:pcqgx8ear5.database.windows.net;initial catalog=interneth3ro;user id=interneth3ro;password=JM71cl!@;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
